--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   # qr
   mobile_scanner: ^4.0.1
   flutter_web_qrcode_scanner: ^1.1.1
+  ai_barcode_scanner: ^3.4.3
 
   # firebase
   firebase_core: ^2.27.0
